...
    <string name="feature_onboarding_example_next_charge">Next charge</string>
    <string name="feature_onboarding_example_tomorrow">Tomorrow</string>
    <string name="feature_onboarding_example_per_month">/ month</string>
    <string name="feature_onboarding_example_could_save">You could save</string>
    <string name="feature_onboarding_example_low_usage">2 subscriptions with low usage</string>
    <string name="feature_onboarding_example_next_prefix">Next: %1$s</string>
    <string name="feature_onboarding_example_rarely_used">Rarely used</string>
</resources>

