...

@SubzeroPreviews
@Composable
private fun SubzeroServiceIconPreview() {
    PreviewTheme {
        Row(modifier = Modifier.padding(16.dp)) {
            listOf("Netflix", "ChatGPT", "Spotify", "Google One", "Adobe", "YouTube", "1Password", "").forEach {
                SubzeroServiceIcon(name = it, modifier = Modifier.padding(end = 8.dp))
            }
        }
    }
}

...
